# imgui.droid

./: LICENSE  README.md  build.gradle  imgui.7z  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  plasma.c
tmp/: adb shell lldb-server spawn.txt  android studio build commands.txt  android studio lldb log.txt  scratch.txt  windows lldb manual ops.txt
